# innu

./: CONTRIBUTING.md  Cargo.toml  README.md  innu.desktop  install.sh
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  discussion.yml  feature_request.yml
.github/workflows/: release.yml
src/: app.rs  lib.rs  main.rs  model.rs  settings.rs
src/backend/: nm.rs
src/platform/: autostart.rs  mod.rs  notifications.rs  tray.rs  uninstall.rs
src/ui/: components.rs  theme.rs
